--- a/archetype/src/test/resources/projects/basic/archetype.properties
+++ b/archetype/src/test/resources/projects/basic/archetype.properties
@@ -1,8 +1,8 @@
 #Tue Dec 16 10:07:20 EST 2014
 package=it.pkg
-version=0.1.0-SNAPSHOT
+version=0.1.0
 groupId=com.deciphernow
 artifactId=gm-fabric-archetype
 appName=TestApp
-serviceFrameworkVersion=0.1.0-SNAPSHOT
-version.service.framework=0.1.0-SNAPSHOT
+serviceFrameworkVersion=0.1.0
+version.service.framework=0.1.0
