--- a/core/pom.xml
+++ b/core/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <groupId>com.deciphernow</groupId>
         <artifactId>gm-fabric</artifactId>
-        <version>0.1.1-SNAPSHOT</version>
+        <version>0.1.1</version>
     </parent>
 
     <artifactId>gm-fabric-core</artifactId>
