--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,7 @@
         <version.scala.major>2.11</version.scala.major>
         <version.scala>${version.scala.major}.8</version.scala>
         <version.scala.test>2.2.1</version.scala.test>
+        <version.scala.plugin>3.1.0</version.scala.plugin>
         <version.typesafe.scala-logging>2.1.2</version.typesafe.scala-logging>
 
         <version.twitter.scrooge>4.14.0</version.twitter.scrooge>
