Issue-37: Prepare 0.1.4-SNAPSHOT

--- a/archetype/src/test/resources/projects/basic/archetype.properties
+++ b/archetype/src/test/resources/projects/basic/archetype.properties
@@ -4,5 +4,5 @@ version=0.1.0-SNAPSHOT
 groupId=com.deciphernow
 artifactId=gm-fabric-archetype
 appName=TestApp
-serviceFrameworkVersion=0.1.3
-version.service.framework=0.1.3
+serviceFrameworkVersion=0.1.4-SNAPSHOT
+version.service.framework=0.1.4-SNAPSHOT
