--- a/core/pom.xml
+++ b/core/pom.xml
@@ -19,12 +19,12 @@
     <parent>
         <groupId>com.deciphernow</groupId>
         <artifactId>gm-fabric</artifactId>
-        <version>0.1.3</version>
+        <version>0.1.4-SNAPSHOT</version>
     </parent>
 
     <artifactId>gm-fabric-core</artifactId>
     <packaging>jar</packaging>
-    <name>Micro-service framework [Core]</name>
+    <name>Microservice framework [Core]</name>
 
     <properties>
         <version.scala.plugin>3.1.0</version.scala.plugin>
