--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,9 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.deciphernow</groupId>
     <artifactId>gm-fabric</artifactId>
-    <version>0.1.3</version>
+    <version>0.1.4-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <name>Micro-service framework</name>
+    <name>Microservice framework</name>
     <description>A microservice framework for the JVM.</description>
     <url>https://github.com/deciphernow/gm-fabric-jvm</url>
 
