--- a/archetype/src/main/resources/archetype-resources/server/pom.xml
+++ b/archetype/src/main/resources/archetype-resources/server/pom.xml
@@ -15,24 +15,16 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <version.tanuki.wrapper>3.5.25</version.tanuki.wrapper>
+        
         <!-- Java Service Wrapper -->
         <jsw.version>${version.tanuki.wrapper}</jsw.version>
         <app.name>${symbol_dollar}{artifactId}</app.name>
 
-        <!-- todo: Fill in user that the application will run as. -->
-        <app.runUser/>
-        <app.runGroup>${symbol_dollar}{app.runUser}</app.runGroup>
-
-        <rpm.version>${symbol_dollar}{version.rpm.${rootArtifactId}}</rpm.version>
-        <rpm.release>0.${maven.build.timestamp}</rpm.release>
-
-        <!--
-
-            This attribute is used in <prefix> and you CANNOT end with a '/'
-
-            todo: Fill in the path that the application is going to install in.
-        -->
-        <rpm.install.dir>/opt/.....</rpm.install.dir>
+        <app.runUser>srvcuser</app.runUser>
+        <app.groupName>services</app.groupName>
+        <app.name>${project.artifactId}</app.name>
+        <rpm.basePath>/opt/services</rpm.basePath>
+        <rpm.version>${version.rpm}</rpm.version>
 
     </properties>
 
@@ -50,6 +42,29 @@
             </plugins>
         </pluginManagement>
         <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>buildnumber-maven-plugin</artifactId>
+                <version>1.4</version>
+                <executions>
+                    <execution>
+                        <phase>generate-resources</phase>
+                        <goals>
+                            <goal>create</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <doCheck>false</doCheck>
+                    <doUpdate>false</doUpdate>
+                    <revisionOnScmFailure>true</revisionOnScmFailure>
+                    <format>{0,number}.{1,date,yyyyMMddHHmm}</format>
+                    <items>
+                        <item>buildNumber</item>
+                        <item>timestamp</item>
+                    </items>
+                </configuration>
+            </plugin>
             <plugin>
                 <artifactId>maven-dependency-plugin</artifactId>
                 <executions>
@@ -255,16 +270,16 @@
                 <artifactId>rpm-maven-plugin</artifactId>
                 <version>2.1-alpha-4</version>
                 <configuration>
-                    <name>${app.name}</name>
+                    <name>${app.name}-${major.minor}</name>
                     <version>${rpm.version}</version>
-                    <release>${rpm.release}</release>
-                    <prefix>${rpm.install.dir}</prefix>
+                    <release>${buildNumber}</release>
+                    <prefix>${rpm.basePath}</prefix>
                     <sourceEncoding>UTF-8</sourceEncoding>
                     <group>Applications/Engineering</group>
                     <defaultDirmode>755</defaultDirmode>
                     <defaultFilemode>644</defaultFilemode>
                     <defaultUsername>${app.runUser}</defaultUsername>
-                    <defaultGroupname>${app.runGroup}</defaultGroupname>
+                    <defaultGroupname>${app.groupName}</defaultGroupname>
                     <defineStatements>
                         <defineStatement>_unpackaged_files_terminate_build 0</defineStatement>
                         <defineStatement>_tmppath /tmp</defineStatement>
@@ -300,7 +315,7 @@
 
                     <mappings>
                         <mapping>
-                            <directory>${rpm.install.dir}/${app.name}-${project.version}</directory>
+                            <directory>${rpm.basePath}/${app.name}-${major.minor}</directory>
                             <filemode>775</filemode>
                             <sources>
                                 <source>
@@ -316,8 +331,8 @@
                             <directoryIncluded>false</directoryIncluded>
                             <sources>
                                 <softlinkSource>
-                                    <location>${rpm.install.dir}/${app.name}-${project.version}/bin/${app.name}</location>
-                                    <destination>${app.name}-${rpm.version}</destination>
+                                    <location>${rpm.basePath}/${app.name}-${major.minor}/bin/${app.name}</location>
+                                    <destination>${app.name}-${major.minor}</destination>
                                 </softlinkSource>
                             </sources>
                         </mapping>
@@ -474,11 +489,6 @@
             <artifactId>scala-compiler</artifactId>
             <version>${symbol_dollar}{version.scala}</version>
         </dependency>
-        <!--<dependency>-->
-            <!--<groupId>com.twitter</groupId>-->
-            <!--<artifactId>gmf-jvm-twitter-server_${version.scala.major}</artifactId>-->
-            <!--<version>${symbol_dollar}{version.twitter.server}</version>-->
-        <!--</dependency>-->
         <dependency>
             <groupId>com.twitter</groupId>
             <artifactId>twitter-server_${version.scala.major}</artifactId>
