--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,8 @@
         <version.finatra>${version.twitter.finatra}</version.finatra>
         <version.guice-injection>4.0</version.guice-injection>
 
+        <major.minor>0.1</major.minor>
+
         <!-- Generic Logging -->
         <version.logback>1.1.2</version.logback>
         <version.slf4j>1.7.9</version.slf4j>
