--- a/archetype/pom.xml
+++ b/archetype/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>com.deciphernow</groupId>
      <artifactId>gm-fabric</artifactId>
-     <version>0.1.4</version>
+     <version>0.1.5-SNAPSHOT</version>
   </parent>
 
   <groupId>com.deciphernow</groupId>
