--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.deciphernow</groupId>
     <artifactId>gm-fabric</artifactId>
-    <version>0.1.4</version>
+    <version>0.1.5-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Microservice framework</name>
     <description>A microservice framework for the JVM.</description>
