Issue #71: Migrate CloudWatch plugin to this repository

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 
     <modules>
         <module>core</module>
+        <module>cloudwatch</module>
         <module>archetype</module>
         <module>integration-setup</module>
         <module>integration-verify</module>
